<resources>
    <string name="search_providers_list_key" translatable="false">search_providers_list</string>
    <string name="locale_key" translatable="false">app_locale</string>
    <string name="search_types_list_key" translatable="false">search_type_list</string>
    <string name="auto_update_key" translatable="false">auto_update</string>
    <string name="skip_update_key" translatable="false">skip_update_key</string>
    <string name="prerelease_update_key" translatable="false">prerelease_update</string>
    <string name="manual_check_update_key" translatable="false">manual_check_update</string>
    <string name="fast_forward_button_time_key" translatable="false">fast_forward_button_time</string>
    <string name="benene_count" translatable="false">benene_count</string>
    <string name="subtitle_settings_key" translatable="false">subtitle_settings_key</string>
    <string name="subtitle_settings_chromecast_key" translatable="false">subtitle_settings_chromecast_key</string>
    <string name="quality_pref_key" translatable="false">quality_pref_key</string>
    <string name="prefer_limit_title_key" translatable="false">prefer_limit_title_key</string>
    <string name="video_buffer_size_key" translatable="false">video_buffer_size_key</string>
    <string name="video_buffer_length_key" translatable="false">video_buffer_length_key</string>
    <string name="video_buffer_clear_key" translatable="false">video_buffer_clear_key</string>
    <string name="video_buffer_disk_key" translatable="false">video_buffer_disk_key</string>
    <string name="prerelease_commit_hash" translatable="false">unknown_prerelease</string>
    <string name="use_system_brightness_key" translatable="false">use_system_brightness_key</string>
    <string name="swipe_enabled_key" translatable="false">swipe_enabled_key</string>
    <string name="playback_speed_enabled_key" translatable="false">playback_speed_enabled_key</string>
    <string name="player_resize_enabled_key" translatable="false">player_resize_enabled_key</string>
    <string name="pip_enabled_key" translatable="false">pip_enabled_key</string>
    <string name="double_tap_enabled_key" translatable="false">double_tap_enabled_key</string>
    <string name="double_tap_pause_enabled_key" translatable="false">double_tap_pause_enabled_key</string>
    <string name="swipe_vertical_enabled_key" translatable="false">swipe_vertical_enabled_key</string>
    <string name="display_sub_key" translatable="false">display_sub_key</string>
    <string name="show_fillers_key" translatable="false">show_fillers_key</string>
    <string name="random_button_key" translatable="false">random_button_key</string>
    <string name="provider_lang_key" translatable="false">provider_lang_key</string>
    <string name="dns_key" translatable="false">dns_key</string>
    <string name="download_path_key" translatable="false">download_path_key</string>
    <string name="nginx_url_key" translatable="false">nginx_url_key</string>
    <string name="nginx_credentials" translatable="false">nginx_credentials</string>
    <string name="nginx_info" translatable="false">nginx_info</string>
    <string name="app_name_download_path" translatable="false">bhaee stream</string>
    <string name="app_layout_key" translatable="false">app_layout_key</string>
    <string name="primary_color_key" translatable="false">primary_color_key</string>
    <string name="restore_key" translatable="false">restore_key</string>
    <string name="killswitch_key" translatable="false">killswitch_key</string>
    <string name="backup_key" translatable="false">backup_key</string>
    <string name="prefer_media_type_key" translatable="false">prefer_media_type_key</string>
    <string name="app_theme_key" translatable="false">app_theme_key</string>
    <string name="episode_sync_enabled_key" translatable="false">episode_sync_enabled_key</string>
    <string name="log_enabled_key" translatable="false">log_enabled_key</string>
    <string name="show_logcat_key" translatable="false">show_logcat_key</string>
    <string name="bottom_title_key" translatable="false">bottom_title_key</string>
    <string name="poster_ui_key" translatable="false">poster_ui_key</string>
    <string name="extra_info_format" translatable="false" formatted="true">%d %s | %sMB</string>
    <string name="storage_size_format" translatable="false" formatted="true">%s • %sGB</string>
    <string name="download_size_format" translatable="false" formatted="true">%sMB / %sMB</string>
    <string name="mb_format" translatable="false" formatted="true">%dMB</string>
    <string name="episode_name_format" translatable="false" formatted="true">%s %s</string>
    <string name="ffw_text_format" translatable="false" formatted="true">+%d</string>
    <string name="rew_text_format" translatable="false" formatted="true">-%d</string>
    <string name="ffw_text_regular_format" translatable="false" formatted="true">%d</string>
    <string name="rew_text_regular_format" translatable="false" formatted="true">%d</string>
    <string name="rating_format" translatable="false" formatted="true">%.1f/10.0</string>
    <string name="year_format" translatable="false" formatted="true">%d</string>
    <string name="app_dub_sub_episode_text_format" formatted="true">%s Ep %d</string>
    <string name="cast_format" formatted="true">Cast: %s</string>
    <string name="result_poster_img_des">Poster</string>
    <string name="search_poster_img_des">@string/result_poster_img_des</string>
    <string name="episode_poster_img_des">Episode Poster</string>
    <string name="home_main_poster_img_des">Main Poster</string>
    <string name="home_next_random_img_des">Next Random</string>
    <string name="episode_play_img_des" translatable="false">@string/play_episode</string>
    <string name="go_back_img_des">Go back</string>
    <string name="change_providers_img_des" translatable="false">@string/home_change_provider_img_des</string>
    <string name="pref_disable_acra">Disable automatic bug reporting</string>
    <string name="show_log_cat">Show logcat 🐈</string>
    <string name="picture_in_picture">Picture-in-picture</string>
    <string name="picture_in_picture_des">Continues playback in a miniature player on top of other apps</string>
    <string name="player_size_settings">Player resize button</string>
    <string name="player_size_settings_des">Remove the black borders</string>
    <string name="player_subtitles_settings">Subtitles</string>
    <string name="player_subtitles_settings_des">Player subtitles settings</string>
    <string name="chromecast_subtitles_settings">Chromecast Subtitles</string>
    <string name="chromecast_subtitles_settings_des">Chromecast subtitles settings</string>
    <string name="eigengraumode_settings">Eigengravy Mode</string>
    <string name="eigengraumode_settings_des">Adds a speed option in the player</string>
    <string name="swipe_to_seek_settings">Swipe to seek</string>
    <string name="swipe_to_seek_settings_des">Swipe left or right to control time in the videoplayer</string>
    <string name="swipe_to_change_settings">Swipe to change settings</string>
    <string name="swipe_to_change_settings_des">Swipe on the left or right side to change brightness or volume</string>
    <string name="double_tap_to_seek_settings">Double tap to seek</string>
    <string name="double_tap_to_pause_settings">Double tap to pause</string>
    <string name="double_tap_to_seek_settings_des">Tap twice on the right or left side to seek forwards or backwards
    </string>
    <string name="double_tap_to_pause_settings_des">Tap in the middle to pause</string>
    <string name="episode_sync_settings">Update watch progress</string>
    <string name="episode_sync_settings_des">Automatically sync your current episode progress</string>
    <string name="restore_settings">Restore data from backup</string>
    <string name="killswitch_settings">Download latest metadata from github</string>
    <string name="killswitch_settings_des">If you want access to all providers (even broken ones) turn this off</string>
    <string name="backup_settings">Backup data</string>
    <string name="search">Search</string>
    <string name="nginx_category">Nginx Settings</string>
    <string name="nginx_credentials_title">Nginx Credential</string>
    <string name="nginx_credentials_summary">You have to use the following format mycoolusername:mysecurepassword123</string>
    <string name="nginx_info_title">What is Nginx ?</string>
    <string name="nginx_info_summary">Nginx is a software that can be used to display files from a server that you own. Click to see a Nginx setup guide</string>
    <string name="settings_info">Info</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="advanced_search_des">Gives you the search results separated by provider</string>
    <string name="bug_report_settings_off">Only sends data on crashes</string>
    <string name="bug_report_settings_on">Sends no data</string>
    <string name="show_fillers_settings">Show filler episode for anime</string>
    <string name="updates_settings">Show app updates</string>
    <string name="updates_settings_des">Automatically search for new updates on start</string>
    <string name="uprereleases_settings">Update to prereleases</string>
    <string name="uprereleases_settings_des">Search for prerelease updates instead of full releases only</string>
    <string name="github">Github</string>
    <string name="lightnovel">Light novel app by the same devs</string>
    <string name="discord">Join Discord</string>
    <string name="benene">Give a benene to the devs</string>
    <string name="benene_des">Given benene</string>
    <string name="app_language">App Language</string>
    <string name="poster_ui_settings">Toggle UI elements on poster</string>
    <string name="check_for_update">Check for Update</string>
    <string name="watch_quality_pref">Preferred watch quality</string>
    <string name="limit_title">Video player title max chars.</string>
    <string name="video_buffer_size_settings">Video buffer size</string>
    <string name="video_buffer_length_settings">Video buffer length</string>
    <string name="video_buffer_disk_settings">Video cache on disk</string>
    <string name="video_buffer_clear_settings">Clear video and image cache</string>
    <string name="video_ram_description">Will cause random crashes if set too high. Don\'t change if you have a low amount of ram such as an Android TV or old phone</string>
    <string name="video_disk_description">May cause problems on systems with low storage space such as Android TV devices if you set it too high</string>
    <string name="dns_pref">DNS over HTTPS</string>
    <string name="dns_pref_summary">Useful for bypassing ISP blocks</string>
    <string name="download_path_pref">Download path</string>
    <string name="nginx_url_pref">Nginx server url</string>
    <string name="display_subbed_dubbed_settings">Display Dubbed/Subbed Anime</string>
    <string name="legal_notice">Disclaimer</string>
    <string name="legal_notice_key" translatable="false">legal_notice_key</string>
    <string name="general">General</string>
    <string name="random_button_settings">Random Button</string>
    <string name="random_button_settings_desc">Show random button on Homepage</string>
    <string name="provider_lang_settings">Provider Languages</string>
    <string name="app_layout">App Layout</string>
    <string name="preferred_media_settings">Preferred Media</string>
    <string name="primary_color_settings">Primary color</string>
    <string name="app_theme_settings">App theme</string>
    <string name="bottom_title_settings">Poster title location</string>
    <string name="bottom_title_settings_des">Put the title under the poster</string>
    <string name="anilist_key" translatable="false">anilist_key</string>
    <string name="mal_key" translatable="false">mal_key</string>
</resources>